# dioxide_python

./: .gitignore  Makefile  README.md  client_config.py  demo.py  pyproject.toml  requirements.txt  setup.py
client/: account.py  block.py  clientlogger.py  contract.py  dioxaccount.py  dioxclient.py  dioxcontract.py  dioxtransaction.py  parser.py  stat.py  transaction.py  types.py
dioxide_python_sdk/: ed25519_compat.py
dioxide_python_sdk/client/: account.py  clientlogger.py  contract.py  dioxclient.py  filters.py  handlers.py  stat.py  transaction.py  types.py
dioxide_python_sdk/config/: client_config.py
dioxide_python_sdk/utils/: gadget.py  request.py  rpc.py  serializer.py
doc/: API_REFERENCE.md  QUICKSTART.md  SM2_TX_SEND_INVESTIGATION.md
scripts/: release.sh
test_contracts/: bank.gcl  bank.prd  controller.gcl  ens.gcl  ens.prd  run.gclts  run.prdts  run_latest_run.html
tests/: account_test.py  block_test.py  contract_test.py  decode_input_test.py  delegated_token_transfer_example.py  delegated_token_transfer_test.py  deploy_contract_test.py  regulation_rotation_test.py  relay_hash_normalize_test.py  relay_hash_test.py  send_transaction_test.py  send_transaction_with_sk_test.py  serde_args_test.py  serialization_test.py  sm2_client_path_test.py  sm2_live_test.py  sm2_send_with_sk_live_test.py  source_code_test.py  subscribe_test.py  transaction_test.py  transfer_test.py
tests/regulation/: crosschain_regulation_test.py  regulation_test.py
tests/regulation/contracts/: audit_interface.prd  audit_proxy.prd  cft_audit.prd  kyc_audit.prd
tests/regulation/contracts/crosschain/: AppContract.gcl  AuthMsg.gcl  CrossTransfer.gcl  SDPMsg.gcl
tests/rotation/: rotation_test.py
utils/: gadget.py  rpc.py
(+1 files in other folders)
