[project]
name = "dioxide-python-sdk"
version = "0.2.0"
description = "dioxide python SDK"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "crc32c==2.7.post1",
    "ed25519==1.5",
    "krock32==0.1.1",
    "python-box==7.2.0",
    "requests==2.32.3",
    "setuptools==75.6.0",
    "websockets==11.0.3",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["dioxide_python_sdk*"]